--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.8.2",
+    "@astrojs/node": "^8.3.2",
     "astro": "^4.12.2",
     "marked": "^13.0.2",
     "typescript": "^5.5.4"
