--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@astrojs/check": "^0.8.2",
     "@astrojs/node": "^8.3.2",
+    "@types/mdast": "^4.0.4",
     "@types/node": "^20.14.12",
     "@types/turndown": "^5.0.5",
     "astro": "^4.12.2",
     "marked": "^13.0.2",
+    "mdast": "^3.0.0",
     "mdast-util-to-markdown": "^2.1.0",
     "rtf-parser": "^1.3.3",
     "turndown": "^7.2.0",
